--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,13 @@
-<h2>asdasd</h2>
+<div class="container">
+		
+		<div class="jumbotron">
+			<h1 class="text-center"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
+			<hr>
+			<br>
+
+			<div class="text-center">
+				<button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-send"></span> Login</button></a>
+						
+			</div>
+
+		</div>
