--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,9 +5,29 @@
 			<hr>
 			<br>
 
-			<div class="text-center">
-				<button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-send"></span> Login</button></a>
-						
-			</div>
+
+			<form method="post" action="/{{actionBtn}}">
+				<div class="row">
+					<div class="col-md-4 col-md-offset-4 authInputs">
+						<input id="username" name="username" placeholder="Username" />
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-4 col-md-offset-4 authInputs">
+						<input id="password" type="password" name="password" placeholder="Password" />
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-4 col-md-offset-4">
+						<button type="submit" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-send"></span> Login</button>
+					</div>
+				</div>
+			</form>
+
+
+
+
 
 		</div>
