--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
 				<br>
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4">
-						<button type="submit" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-send"></span> Login</button>
+						<button type="submit" class="btn btn-lg btn-primary" id="submitUser"><span class="glyphicon glyphicon-send"></span> Login</button>
 					</div>
 				</div>
 			</form>
