--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,13 @@
 <div class="container">
 		
-		<div class="jumbotron">
+		<div class="jumbotron colorMain">
 			<h1 class="text-center"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
 			<hr>
 			<br>
 
+			<h1>{{newPass}}</h1>
 
-			<form method="post" action="/{{actionBtn}}">
+			<form method="post" action="/{{actionPush}}">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 authInputs">
 						<input id="username" name="username" placeholder="Username" />
@@ -21,10 +22,17 @@
 				<br>
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4">
-						<button type="submit" class="btn btn-lg btn-primary" id="submitUser"><span class="glyphicon glyphicon-send"></span> Login</button>
+						<button type="submit" class="btn btn-lg btn-primary" id="submitUser"><span class="glyphicon glyphicon-send"></span> Submit</button>
 					</div>
 				</div>
 			</form>
+
+			<br>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<a href="/{{otherAction}}" class="btn btn-success pull-right" type="submit" id="submitUser">{{otherAction}}</a>
+				</div>
+			</div>
 
 
 
