--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -1,5 +1,12 @@
 
 
 .colorMain {
+	background-image: url('http://www.dreamtemplate.com/dreamcodes/bg_images/color/c5.jpg');
 	
 }
+
+.message {
+	font-size: 40px;
+	
+}
+
