--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,2 +1,8 @@
+.colorMain {
+  background-image: url("http://www.dreamtemplate.com/dreamcodes/bg_images/color/c5.jpg"); }
+
+.message {
+  font-size: 40px; }
+
 h3 {
   background-color: green; }
