--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,36 +3,41 @@
 		<div class="jumbotron colorMain">
 			<h1 class="text-center"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
 			<hr>
+						<div class="row">
+				<div class="col-md-11 col-md-offset-11">
+					<a href="/{{otherAction}}" class="btn btn-success" type="submit" id="submitUser">{{otherAction}}</a>
+				</div>
+			</div>
 			<br>
 
-			<h1>{{newPass}}</h1>
+
+			<div class="row">
+				<h1 class="col-md-5 col-md-offset-5 message">{{newPass}}
+				</h1>
+			<div>
 
 			<form method="post" action="/{{actionPush}}">
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4 authInputs">
+					<div class="col-md-5 col-md-offset-5">
 						<input id="username" name="username" placeholder="Username" />
 					</div>
 				</div>
 				<br>
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4 authInputs">
+					<div class="col-md-5 col-md-offset-5">
 						<input id="password" type="password" name="password" placeholder="Password" />
 					</div>
 				</div>
 				<br>
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4">
+					<div class="col-md-5 col-md-offset-5">
 						<button type="submit" class="btn btn-lg btn-primary" id="submitUser"><span class="glyphicon glyphicon-send"></span> Submit</button>
 					</div>
 				</div>
 			</form>
 
 			<br>
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4">
-					<a href="/{{otherAction}}" class="btn btn-success pull-right" type="submit" id="submitUser">{{otherAction}}</a>
-				</div>
-			</div>
+
 
 
 
