--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,8 +12,9 @@
 
 
 			<div class="row">
-				<h1 class="col-md-5 col-md-offset-5 message">{{newPass}}
-				</h1>
+				<div class="col-md-5 col-md-offset-5">
+					<h1 id='message1'> {{newPass}} </h1>
+				</div>
 			<div>
 
 			<form method="post" action="/{{actionPush}}">
