--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -17,14 +17,56 @@
 	</head>
     <body>
             
-        <div class="page-header">
+        <div class="page-header mainhead">
             <div class="row" style="width: 100%">
 
                 <span class="col-md-9"><img id='pichead' src="/images/Classroom-Image.png" alt="Classrom"></span>
                 <span class="col-md-1 col-md-offset-2"><a href="/logout"><button type="button" id="logout"class="btn btn-primary">Log Out</button></a></span>
             </div>
-        </div>    	
-        
+        </div> 
+
+         <div id="wrapper">
+
+         <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Welcome {{username}}
+                    </a>
+                </li>
+                <li>
+                    <a href="https://parentaccess.ocps.net/General/LoginPage.aspx?DistrictID=31">Check Grades</a>
+                </li>
+                <li>
+                    <a href="https://www.ocps.net/es/cr/resources/Pages/default.aspx">Volunteer</a>
+                </li>
+                <li>
+                    <a href="https://www.ocps.net/lc/southeast/eln/Pages/default.aspx">School Home Page</a>
+                </li>
+                <li>
+                    <a href="https://www.ocps.net/parents/Pages/default.aspx">Additional Resources</a>
+                </li>
+                <li>
+                    <a href="mailto:matthew.gusmano@gmail.com">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Main Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1>Welcome to our page!</h1>
+                        <p>More information to come!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+        </div>
 
     
     </body>
