added styling to sidebar fonts

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+ }
+
 #pichead {
 	max-height: 10%;
 	max-width: 10%;
@@ -11,12 +15,6 @@
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
-
-
-
- body {
-    overflow-x: hidden;
- }
 
 
 
@@ -68,6 +66,16 @@
 }
 
 /* Sidebar Styles */
+
+#listname {
+
+	font-family: 'Roboto Slab', serif;
+}
+
+#userin {
+	font-size: 25px;
+	font-family: 'Schoolbell', cursive;
+}
 
 .sidebar-nav {
     position: absolute;
