--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -12,6 +12,9 @@
 		<script type="text/javascript" src="/app.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="/styles/app.css">
+		{{!-- fonts --}}
+		<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
       
 		
 	</head>
@@ -31,24 +34,24 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <div id="userin">
                         Welcome {{username}}
-                    </a>
+                    </div>
                 </li>
                 <li>
-                    <a href="https://parentaccess.ocps.net/General/LoginPage.aspx?DistrictID=31">Check Grades</a>
+                    <a href="https://parentaccess.ocps.net/General/LoginPage.aspx?DistrictID=31" id='listname'>Check Grades</a>
                 </li>
                 <li>
-                    <a href="https://www.ocps.net/es/cr/resources/Pages/default.aspx">Volunteer</a>
+                    <a href="https://www.ocps.net/es/cr/resources/Pages/default.aspx" id='listname'>Volunteer</a>
                 </li>
                 <li>
-                    <a href="https://www.ocps.net/lc/southeast/eln/Pages/default.aspx">School Home Page</a>
+                    <a href="https://www.ocps.net/lc/southeast/eln/Pages/default.aspx" id='listname'>School Home Page</a>
                 </li>
                 <li>
-                    <a href="https://www.ocps.net/parents/Pages/default.aspx">Additional Resources</a>
+                    <a href="https://www.ocps.net/parents/Pages/default.aspx" id='listname'>Additional Resources</a>
                 </li>
                 <li>
-                    <a href="mailto:matthew.gusmano@gmail.com">Contact</a>
+                    <a href="mailto:matthew.gusmano@gmail.com" id='listname'>Contact</a>
                 </li>
             </ul>
         </div>
