--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container stretch">
 		
 		<div class="jumbotron colorMain">
 			<h1 class="text-center"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
