centered logout button on userpage

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -8,13 +8,17 @@ body {
 }
 
 #logout {
-	position: bottom; 
+	right: 15px;
+	margin-top: 1em;
 }
 
 .mainhead {
 	margin-top: 0px;
 	margin-bottom: 0px;
+
 }
+
+
 
 
 
