--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -17,7 +17,8 @@ body {
   max-width: 10%; }
 
 #logout {
-  position: bottom; }
+  right: 15px;
+  margin-top: 1em; }
 
 .mainhead {
   margin-top: 0px;
