added messages schema to data folder

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,6 +4,9 @@
 #message1 {
   font-size: 18px; }
 
+.loginstyle {
+  font-family: 'Fredericka the Great', cursive; }
+
 /*.stretch {
 	margin-top: 10%;
 	margin-bottom: 10%;
