--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,8 @@
 		<script type="text/javascript" src="/app.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="/styles/app.css">
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
       
 		
 	</head>
