--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="container stretch">
 		
 		<div class="jumbotron colorMain">
-			<h1 class="text-center"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
+			<h1 class="text-center loginstyle"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
 			<hr>
 						<div class="row">
 				<div class="col-md-11 col-md-offset-11">
