--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -10,6 +10,10 @@
 	
 }
 
+.loginstyle {
+	font-family: 'Fredericka the Great', cursive;
+}
+
 /*.stretch {
 	margin-top: 10%;
 	margin-bottom: 10%;
