--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -56,15 +56,27 @@
             </ul>
         </div>
 
-        <!-- Main Content -->
+        {{!-- Main Content --}}
         <div id="page-content-wrapper">
             <div class="container-fluid">
+                <!-- Teacher Content relating to homework and Upcoming Events -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Welcome to our page!</h1>
-                        <p>More information to come!</p>
+                        <h1>Homework for this week</h1>
+                        <p>Upcoming Events to put on your calender</p>
                     </div>
                 </div>
+                {{!-- Messaging Portion --}}
+                <div class="row">
+                    <div class="col-lg-12">
+						<form>
+						  <div class="form-group">
+						    <label for="formGroupExampleInput">Post your questions or concerns</label>
+						    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Post away :)">
+						  </div>
+						</form> 
+				    </div>
+                </div>               
             </div>
         </div>
         <!-- /#page-content-wrapper -->
