adding to mysql Schema

--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -38,6 +38,15 @@
                         Welcome {{username}}
                     </div>
                 </li>
+{{!-- 				{{if isTeacher}}
+                <li>
+                    <a href="" id='listname'>Manage Students</a>
+                </li>
+                <li>
+                    <a href="" id='listname'>Add Homework</a>
+                </li>
+				{{/if}}
+                <li></li> --}}
                 <li>
                     <a href="https://parentaccess.ocps.net/General/LoginPage.aspx?DistrictID=31" id='listname'>Check Grades</a>
                 </li>
