--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,14 +19,17 @@
 
 			<form method="post" action="/{{actionPush}}">
 				<div class="row">
-					<div class="col-md-5 col-md-offset-5">
-						<input id="username" name="username" placeholder="Username" />
+					<div class="col-md-4 col-md-offset-4">
+						<input type="text" class="form-control" id="formGroupExampleInput username" name="username" placeholder="Username" />
+
+
+
 					</div>
 				</div>
 				<br>
 				<div class="row">
-					<div class="col-md-5 col-md-offset-5">
-						<input id="password" type="password" name="password" placeholder="Password" />
+					<div class="col-md-4 col-md-offset-4">
+						<input class="form-control" id="formGroupExampleInput password" type="password" name="password" placeholder="Password" />
 					</div>
 				</div>
 				<br>
