--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -38,7 +38,7 @@
                         Welcome {{username}}
                     </div>
                 </li>
-{{!-- 				{{if isTeacher}}
+				{{#if isTeacher}}
                 <li>
                     <a href="" id='listname'>Manage Students</a>
                 </li>
@@ -46,7 +46,6 @@
                     <a href="" id='listname'>Add Homework</a>
                 </li>
 				{{/if}}
-                <li></li> --}}
                 <li>
                     <a href="https://parentaccess.ocps.net/General/LoginPage.aspx?DistrictID=31" id='listname'>Check Grades</a>
                 </li>
