--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -82,13 +82,22 @@
 						    <label for="formGroupExampleInput">Post your questions or concerns</label>
 						    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Post away :)">
 						  
-  						<button class="btn btn-default" id="makeComment">Post a Comment</button>
-
-
+  						<button class="btn btn-default" id="makePost">Post a Comment</button>
 						  </div>
 						</form> 
 				    </div>
-                </div>               
+                </div> 
+
+                {{!-- Receive Posts --}}
+                <div class="row">
+                    <div class="col-lg-12">
+					
+
+
+
+                    </div>
+                </div>
+
             </div>
         </div>
         <!-- /#page-content-wrapper -->
@@ -102,7 +111,7 @@
 
 
         {{!-- User Post Modal --}}
-        	<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="commentModal">
+        	<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="postModal">
 		<div class="modal-dialog modal-sm">
     		<div class="modal-content">
     			<div class="modal-header">
@@ -110,12 +119,12 @@
       				<h1 class="modal-title">Classroom Central</h1>
       			</div>
       			<div class="modal-body">
-        			<form method="post" action="/search" id="searchForm">
+        			<form id="postForm">
   						<div class="form-group">
     						<label for="search">Please share your thoughts with the class</label>
-    						<input type="text" class="form-control" id="post1" placeholder="" name="search" required>
+    						<input type="text" class="form-control" id="postMain" placeholder="" name="post" required>
  						</div>
-  						<button class="btn btn-default" id="searchSubmit">Submit</button>
+  						<button class="btn btn-default" id="postSubmit">Submit</button>
 
 
 
