--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -82,9 +82,11 @@
 						    <label for="formGroupExampleInput">Post your questions or concerns</label>
 						    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Post away :)">
 						  
-  						<button class="btn btn-default" id="makePost">Post a Comment</button>
+  						
 						  </div>
 						</form> 
+<button class="btn btn-default" id="makePost">Post a Comment</button>
+
 				    </div>
                 </div> 
 
@@ -122,7 +124,7 @@
         			<form id="postForm">
   						<div class="form-group">
     						<label for="search">Please share your thoughts with the class</label>
-    						<input type="text" class="form-control" id="postMain" placeholder="" name="post" required>
+    						<input type="text" class="form-control" id="postMain" placeholder="">
  						</div>
   						<button class="btn btn-default" id="postSubmit">Submit</button>
 
