--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -59,7 +59,7 @@
                     <a href="https://www.ocps.net/parents/Pages/default.aspx" id='listname'>Additional Resources</a>
                 </li>
                 <li>
-                    <a href="mailto:matthew.gusmano@gmail.com" id='listname'>Contact</a>
+                    <a href="mailto:{{email}}"  id='listname'>Contact</a>
                 </li>
             </ul>
         </div>
