addded classes in mysql

--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -46,7 +46,7 @@
                     <a href="/managestudents" id='listname'>Manage Students</a>
                 </li>
                 <li>
-                    <a href="" id='listname'>Add Homework</a>
+                    <a href="/homework" id='listname'>Add Homework/Events</a>
                 </li>
 				{{/if}}
                 <li>
