--- a/views/addusers.handlebars
+++ b/views/addusers.handlebars
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Add Students</h1>
-            <form method="post" action="/managestudents">
+            <form method="post" action="/adduser">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
                         <input type="text" class="form-control" id="formGroupExampleInput username" name="username" placeholder="Username" />
