pushing to post table

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -14,9 +14,10 @@
 						<form>
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Post your questions or concerns</label>
-						    <input type="text" class="form-control" id="postMain" method="post" action="/addPost"placeholder="Post away :)">
+						    <input type="text" class="form-control" id="postMain"   
+                placeholder="Post away :)">
 						  </div>
-                          <button class="btn btn-default" id="makePost">Post a Comment</button>
+                 <button class="btn btn-default" id="makePost">Post a Comment</button>
 						</form> 
 
 
@@ -40,7 +41,7 @@
         </div>
 
 
-
+{{!--  method="post" action="/addPost" --}}
 
 
 
