almost pulling students

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -14,8 +14,8 @@
 						<form>
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Post your questions or concerns</label>
-						    <input type="text" class="form-control" id="postMain"   
-                placeholder="Post away :)">
+{{!-- 						    <input type="text" class="form-control" id="postMaiz"   
+                placeholder="Post away :)"> --}}
 						  </div>
                  <button class="btn btn-default" id="makePost">Post a Comment</button>
 						</form> 
@@ -41,13 +41,8 @@
         </div>
 
 
-{{!--  method="post" action="/addPost" --}}
-
-
-
-
         {{!-- User Post Modal --}}
-{{!--         	<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="postModal">
+        	<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="postModal">
 		<div class="modal-dialog modal-sm">
     		<div class="modal-content">
     			<div class="modal-header">
@@ -62,15 +57,21 @@
  						</div>
   						<button class="btn btn-default" id="postSubmit">Submit</button>
 
-
-
-
 					</form>
       			</div>
 			</div>
   		</div>
-	</div> --}}
+	</div>
 
  
 
 
+
+
+
+
+
+
+
+
+{{!--  method="post" action="/addPost" --}}
