users pulling to page

--- a/views/addusers.handlebars
+++ b/views/addusers.handlebars
@@ -32,11 +32,23 @@
                 {{!-- Messaging Portion --}}
                 <div class="row">
                     <div class="col-lg-12">
- 
-                    <h1>
-                    <li>
-                    <li></li>
-                    </li>
+
+                    {{!-- Table will pull here --}}
+                    
+                        <table style="width:100%">
+                          <tr>
+                            <th>Username</th>
+                            <th>Password</th>
+                            <th>UserID</th>
+                          </tr>
+                    {{#each userData}}
+                          <tr>
+                            <td>{{username}}</td>
+                            <td>{{password}}</td>
+                            <td>1{{UserId}}</td>
+                          </tr>
+                    {{/each}}
+                        </table>
 
 				    </div>
                 </div> 
