--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -4,9 +4,9 @@
 						<form>
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Add Homework Assignments</label>
-						    <input type="text" class="form-control" id="postHomework" method="post" action="/addPost"placeholder="">
+						    <input type="text" class="form-control" id="postHomework" placeholder="">
 						  </div>
-                          <button class="btn btn-default" id="makePost">Submit</button>
+                          <button class="btn btn-default" id="makePostone">Submit</button>
 						</form> 
 
 				<br>
@@ -17,5 +17,5 @@
 						    <label for="formGroupExampleInput">Add Upcoming Events</label>
 						    <input type="text" class="form-control" id="postEvents" method="post" action="/addPost"placeholder="">
 						  </div>
-                          <button class="btn btn-default" id="makePost">Submit</button>
+                          <button class="btn btn-default" id="makePosttwo">Submit</button>
 						</form> 
