--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -28,7 +28,10 @@
                 <div class="row">
                     <div class="col-lg-12">
 					
-
+                    {{#each posts}}
+                    <h1>Post from {{username}}</h1>
+                    <h1>{{text}}</h1>
+                    {{/each}}
 
 
                     </div>
