posts now adding username

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -29,7 +29,7 @@
                     <div class="col-lg-12">
 					
                     {{#each posts}}
-                    <h1>Post from {{username}}</h1>
+                    <h1>Post from: {{usernameP}}</h1>
                     <h1>{{text}}</h1>
                     {{/each}}
 
