--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -1,5 +1,5 @@
 {{!-- Main Content --}}
-        <div id="page-content-wrapper">
+        <div class="reusable-padding">
             <div class="container-fluid">
                 <!-- Teacher Content relating to homework and Upcoming Events -->
                 <div class="row">
