--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -14,9 +14,13 @@ body {
 
 .mainhead {
 	margin-top: 0px;
-	margin-bottom: 0px;
+    margin-bottom: 0px;
+    position: fixed;
+    z-index: 1;
+    background-color: grey;
 
 }
+
 
 
 
@@ -40,8 +44,8 @@ body {
 }
 
 #sidebar-wrapper {
-    z-index: 1000;
     position: fixed;
+    top: 57px;
     left: 250px;
     width: 0;
     height: 100%;
@@ -127,6 +131,10 @@ body {
     background: none;
 }
 
+.reusable-padding {
+    padding-top: 6em;
+}
+
 /*Page Resize*/
 
 @media(min-width:768px) {
@@ -156,4 +164,6 @@ body {
         margin-right: 0;
     }
 }
+
+
 
