--- a/views/addusers.handlebars
+++ b/views/addusers.handlebars
@@ -1,4 +1,5 @@
-        {{!-- Main Content --}}
+        {{!-- Main Content --}}    
+    <div class="reusable-padding">
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <!-- Teacher Content relating to homework and Upcoming Events -->
@@ -66,6 +67,7 @@
         <!-- /#page-content-wrapper -->
 
         </div>
+    <div>
  
 
 
