--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -1,3 +1,5 @@
+               
+			<div class="reusable-padding">
                <br>
                 <div class="row">
                     <div class="col-lg-8">
@@ -19,3 +21,4 @@
 						  </div>
                           <button class="btn btn-default" id="makePosttwo">Submit</button>
 						</form> 
+			</div>
