--- a/views/teachercreate.handlebars
+++ b/views/teachercreate.handlebars
@@ -1,4 +1,4 @@
-<div class="container stretch">
+<div class="container stretch reusable-padding">
 		
 		<div class="jumbotron colorMain">
 			<h1 class="text-center loginstyle"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
