--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -17,8 +17,24 @@ body {
     margin-bottom: 0px;
     position: fixed;
     z-index: 1;
-    background-color: grey;
+    background-color: #15b87a;
 
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
 
 
