added delete button for posts

--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -31,7 +31,7 @@
                     {{#each posts}}
                     <tr class="tr">
                     <td class="td">Post from: {{usernameP}}</td>
-                    <td class="td">{{text}} <button id="dPost">delete</button></td>
+                    <td class="td">{{text}} <button id="dPost" data-id={{msg_id}}>delete</button></td>
                     </tr>
                     {{/each}}
                     </table>
