added styling to userpage

--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -15,6 +15,7 @@
 		{{!-- fonts --}}
 		<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
       
 		
 	</head>
@@ -35,7 +36,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <div id="userin">
-                        Welcome {{username}}
+                        Welcome {{nameuse}}
                     </div>
                 </li>
                 <li>
