--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -37,6 +37,21 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
+#homeworkstyle {
+    font-family: 'Schoolbell', cursive;
+    font-size: 30px;
+    text-decoration: underline;
+}
+
+.homeout {
+    font-family: 'Merriweather', serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.groupchange {
+    width: 50%;
+}
 
 
 
