--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -15,7 +15,7 @@
 		{{!-- fonts --}}
 		<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
       
 		
 	</head>
