--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -8,24 +8,16 @@
                         <ul class="list-group groupchange">
                         {{#each homework}}
                         <li class="list-group-item homeout">{{text}}</li>
+                        <br>
                         {{/each}}
                         </ul>
-
-
-{{!-- <ul class="list-group">
-  <li class="list-group-item">Cras justo odio</li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item">Vestibulum at eros</li>
-</ul> --}}
-
-
-
                     <h1 id="homeworkstyle">Upcoming Events</h1>
+                        <ul class="list-group groupchange">
                         {{#each events}}
-                        <p>{{text}}</p>
+                        <li class="list-group-item homeout">{{text}}</li>
+                        <br>
                         {{/each}}
+                        </ul>
                     </div>
                 </div>
                 {{!-- Messaging Portion --}}
@@ -33,11 +25,11 @@
                     <div class="col-lg-12">
 						<form>
 						  <div class="form-group">
-						    <label for="formGroupExampleInput">Post your questions or concerns</label>
+						    <label for="formGroupExampleInput" id="postlabel">Post your questions or concerns</label>
 {{!-- 						    <input type="text" class="form-control" id="postMaiz"   
                 placeholder="Post away :)"> --}}
 						  </div>
-                 <button class="btn btn-default" id="makePost">Post a Comment</button>
+                 <button class="btn btn-success" id="makePost">Post a Comment</button>
 						</form> 
             <br>
 
