styling to add homework page

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -63,8 +63,21 @@ tr:nth-child(even) {
     font-size: 17px;
 }
 
+#moveright {
+    margin-left: 10px;
+}
 
+#postEvents {
+    width:  400px;
+}
 
+#postHomework {
+    width: 400px;
+}
+
+/*.testtt {
+    margin-right: 100px;
+}*/
 
 
 
