--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -3,7 +3,7 @@
                <br>
                 <div class="row">
                     <div class="col-lg-8">
-						<form>
+						<form id="moveright">
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Add Homework Assignments</label>
 						    <input type="text" class="form-control" id="postHomework" placeholder="">
@@ -14,7 +14,7 @@
 				<br>
                 <div class="row">
                     <div class="col-lg-12">
-						<form>
+						<form id="moveright">
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Add Upcoming Events</label>
 						    <input type="text" class="form-control" id="postEvents" method="post" action="/addPost"placeholder="">
