fixed post functionality on userpage

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -75,6 +75,22 @@ tr:nth-child(even) {
     width: 400px;
 }
 
+#dPost {
+    background-color: tan;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 10px;
+    float: right;
+}
+
+.td2{
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    font-family: 'Francois One', sans-serif;
+    font-size: 17px;
+}
+
+
 /*.testtt {
     margin-right: 100px;
 }*/
