--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -41,8 +41,8 @@
 					          <table id="postTable">
                     {{#each posts}}
                     <tr class="tr">
-                    <td class="td">Post from: {{usernameP}}</td>
-                    <td class="td">{{text}} <button id="dPost" data-id={{msg_id}}>delete</button></td>
+                    <td class="td2">Post From: {{usernameP}}</td>
+                    <td class="td2">{{text}} <button id="dPost" data-id={{msg_id}}>Delete</button></td>
                     </tr>
                     {{/each}}
                     </table>
