--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -68,6 +68,19 @@ tr:nth-child(even) {
 #postHomework {
   width: 400px; }
 
+#dPost {
+  background-color: tan;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 10px;
+  float: right; }
+
+.td2 {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  font-family: 'Francois One', sans-serif;
+  font-size: 17px; }
+
 /*.testtt {
     margin-right: 100px;
 }*/
