--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -16,6 +16,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
       
 		
 	</head>
