--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -90,6 +90,13 @@ tr:nth-child(even) {
     font-size: 17px;
 }
 
+#dUser {
+    background-color: tan;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 10px;
+    float: right;
+}
+
 
 /*.testtt {
     margin-right: 100px;
