--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
 			<h1 class="text-center loginstyle"><span class="glyphicon glyphicon-apple"></span> Welcome to Classroom Central</h1>
 			<hr>
 						<div class="row">
-				<div class="col-md-11 col-md-offset-11">
+				<div class="pull-right">
 					<a href="/{{otherAction}}" class="btn btn-success" type="submit" id="submitUser">{{otherAction}}</a>
 				</div>
 			</div>
