--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -40,7 +40,7 @@ tr:nth-child(even) {
 #homeworkstyle {
     font-family: 'Schoolbell', cursive;
     font-size: 30px;
-    text-decoration: underline;
+    /*text-decoration: underline;*/
     /*background-color: pink;*/
 }
 
@@ -48,19 +48,27 @@ tr:nth-child(even) {
     font-family: 'Libre Baskerville', serif;
     font-weight: bold;
     font-size: 17px;
-    background-color: lightblue;
+    background-color: #e3b57b;
+}
+
+.eventout {
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bold;
+    font-size: 17px;
+    background-color: #ccffcc;
 }
 
 .groupchange {
     width: 50%;
 }
 
+
 #makepost {
     size: 10%;
 }
 
 #postlabel {
-    font-size: 17px;
+    font-size: 23px;
 }
 
 #moveright {
@@ -95,6 +103,10 @@ tr:nth-child(even) {
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
     float: right;
+}
+
+.glyphicon-chevron-down {
+    font-size: 23px;
 }
 
 
