fixed delting issue of users and homework

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -83,7 +83,7 @@ tr:nth-child(even) {
     width: 400px;
 }
 
-#dPost {
+.dPost {
     background-color: tan;
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
@@ -98,8 +98,22 @@ tr:nth-child(even) {
     font-size: 17px;
 }
 
-#dUser {
+.dUser {
     background-color: tan;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 10px;
+    float: right;
+}
+
+.dHome {
+    background-color: red;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 10px;
+    float: right;
+}
+
+.dEvent {
+    background-color: red;
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
     float: right;
