--- a/views/addusers.handlebars
+++ b/views/addusers.handlebars
@@ -44,7 +44,7 @@
                     {{#each userData}}
                           <tr>
                             <td>{{username}}</td>
-                            <td>{{password}}<button id="dUser" data-id={{userId}}>Delete</button></td>
+                            <td>{{password}}<button class="dUser" data-id={{userId}}>Delete</button></td>
                           </tr>
                     {{/each}}
                         </table>
