--- a/views/userpage.handlebars
+++ b/views/userpage.handlebars
@@ -44,7 +44,7 @@
                     {{#each posts}}
                     <tr class="tr">
                     <td class="td2">Post From: {{usernameP}}</td>
-                    <td class="td2">{{text}} <button id="dPost" data-id={{msg_id}}>Delete</button></td>
+                    <td class="td2">{{text}} <button class="dPost" data-id={{msg_id}}>Delete</button></td>
                     </tr>
                     {{/each}}
                     </table>
