updated userpage sytyling/buttons

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -5,6 +5,7 @@ body {
 #pichead {
 	max-height: 10%;
 	max-width: 10%;
+    margin-left: 15px;
 }
 
 #logout {
@@ -65,6 +66,11 @@ tr:nth-child(even) {
 
 #makepost {
     size: 10%;
+    background: #15b87a;
+}
+
+.btn-success{
+  background: #15b87a; 
 }
 
 #postlabel {
@@ -106,14 +112,14 @@ tr:nth-child(even) {
 }
 
 .dHome {
-    background-color: red;
+    background-color: #F56049;
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
     float: right;
 }
 
 .dEvent {
-    background-color: red;
+    background-color: #F56049;
     font-family: 'Libre Baskerville', serif;
     font-size: 10px;
     float: right;
@@ -128,10 +134,17 @@ tr:nth-child(even) {
 }
 
 
-/*.testtt {
-    margin-right: 100px;
-}*/
+.modal-header {
+    background: #15b87a;
+    font-family: 'Fredericka the Great', cursive;
+}
+#postSubmit{
+    background: #15b87a;
+}
 
+#submitUser {
+    font-size: 13px;
+}
 
 
 
