updating homework push function

--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -64,7 +64,7 @@
                     <a href="https://www.ocps.net/parents/Pages/default.aspx" id='listname'>Additional Resources</a>
                 </li>
                 <li>
-                    <a href="mailto:{{email}}"  id='listname'>Contact</a>
+                    <a href="mailto:{{email}}"  id='listname'>Contact Teacher</a>
                 </li>
             </ul>
         </div>
