--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -6,7 +6,7 @@
 						<form id="moveright">
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Add Homework Assignments</label>
-						    <input type="text" class="form-control" id="postHomework" placeholder="">
+						    <input type="text" class="form-control" id="postHomework" method="post" placeholder="">
 						  </div>
                           <button class="btn btn-default" id="makePostone">Submit</button>
 						</form> 
@@ -17,7 +17,7 @@
 						<form id="moveright">
 						  <div class="form-group">
 						    <label for="formGroupExampleInput">Add Upcoming Events</label>
-						    <input type="text" class="form-control" id="postEvents" method="post" action="/addPost"placeholder="">
+						    <input type="text" class="form-control" id="postEvents" method="post" placeholder="">
 						  </div>
                           <button class="btn btn-default" id="makePosttwo">Submit</button>
 						</form> 
