--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -10,6 +10,7 @@
 						  </div>
                           <button class="btn btn-default" id="makePostone">Submit</button>
 						</form> 
+				</div>
 
 				<br>
                 <div class="row">
