--- a/views/homework.handlebars
+++ b/views/homework.handlebars
@@ -11,7 +11,7 @@
                           <button class="btn btn-default" id="makePostone">Submit</button>
 						</form> 
 				</div>
-
+					</div>
 				<br>
                 <div class="row">
                     <div class="col-lg-12">
@@ -22,6 +22,7 @@
 						  </div>
                           <button class="btn btn-default" id="makePosttwo">Submit</button>
 						</form> 
+					</div>
 				</div>
 				<br>
 			                <div class="row check">
