--- a/views/layouts/user.handlebars
+++ b/views/layouts/user.handlebars
@@ -45,7 +45,7 @@
                 </li>                
 				{{#if isTeacher}}
                 <li>
-                    <a href="/managestudents" id='listname'>Manage Students</a>
+                    <a href="/managestudents" id='listname'>Manage Families</a>
                 </li>
                 <li>
                     <a href="/homework" id='listname'>Add Homework/Events</a>
