--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,6 +14,9 @@
 body {
   overflow-x: hidden; }
 
+.imggg {
+  background-image: url("/images/img3.png"); }
+
 #pichead {
   max-height: 10%;
   max-width: 10%;
@@ -45,9 +48,7 @@ tr:nth-child(even) {
 
 #homeworkstyle {
   font-family: 'Schoolbell', cursive;
-  font-size: 30px;
-  /*text-decoration: underline;*/
-  /*background-color: pink;*/ }
+  font-size: 30px; }
 
 .homeout {
   font-family: 'Libre Baskerville', serif;
