--- a/views/addusers.handlebars
+++ b/views/addusers.handlebars
@@ -5,7 +5,7 @@
                 <!-- Teacher Content relating to homework and Upcoming Events -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Add Students:</h1>
+                        <h1>Add Family:</h1>
             <form method="post" action="/adduser">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
