--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -96,7 +96,7 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
-  font-family: 'Francois One', sans-serif;
+  font-family: 'Gloria Hallelujah', cursive;
   font-size: 17px;
   color: white; }
 
